--- a/finance_python/3-2. stationery_test.ipynb
+++ b/finance_python/3-2. stationery_test.ipynb
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "QUANDL_KEY = '개별 API KEY' # replace {key} with your own API key  \n",
+    "QUANDL_KEY = '개별 API KEY'  \n",
     "quandl.ApiConfig.api_key = QUANDL_KEY\n",
     "\n",
     "gold = quandl.get(dataset='WGC/GOLD_MONAVG_USD',start_date='2001-01-01', end_date='2018-12-31')\n",
